# moveshelf-python-api

./: LICENSE  README.md  pyproject.toml
docs/: conf.py  modules.rst  moveshelf_api.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  moveshelf_api.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  moveshelf_api.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/moveshelf_api/: api.html  util.html
docs/_build/html/_sources/: index.rst.txt
src/moveshelf_api/: api.py  util.py
src/moveshelf_api/utils/: hash.py
