[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moveshelf_api"
version = "1.4.0"
authors = [
  { name="Moveshelf", email="info@moveshelf.com" },
]
description = "Public package including the Python API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "urllib3",
    "six",
    "crcmod",
    "mypy_extensions",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
"Homepage" = "https://github.com/moveshelf/moveshelf-python-api"

[project.optional-dependencies]
enum = ["enum34; python_version<'3.4'"]